preparing user interface

--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>hi</title>
+    <title>Spirograph</title>
   </head>
+  <script src="jquery-3.0.0.min.js" charset="utf-8"></script>
   <script src="p5.min.js" charset="utf-8"></script>
   <script src="client.js" charset="utf-8"></script>
   <body>
+    <h2>Spirograph Antics</h2>
+    Number of levels (1 to 5; press Enter to change): <input type="number" name="" value="" id="lvls"><br><br>
+    <div id="levels">
+
+    </div>
+    <button type="button" name="button" id="sub">Submit</button><br><br>
+
 
   </body>
 </html>
