Interesting effect: we can change the moon that is being traced in real time to create discontinuous signatures

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="client.js" charset="utf-8"></script>
   <body>
     <h2>Spirograph Antics</h2>
-    Number of levels (1 to 5; press Enter to change): <input type="number" name="" value="" id="lvls"><br><br>
+    Number of levels (1, 2 or 3; press Enter to change): <input type="number" name="" value="" id="lvls"><br><br>
     <div id="levels">
 
     </div>
