final touches, cleaning up code

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="client.js" charset="utf-8"></script>
   <body>
     <h2>Spirograph Antics</h2>
+    Hint: for compact, symmetrical pictures, make orbital speeds multiples of one another.
+    
     Number of levels (1, 2 or 3; press Enter to change): <input type="number" name="" value="" id="lvls"><br><br>
     <div id="levels">
 
